@@ -4,6 +4,7 @@
     * Re-enable Oracle repository.
     * Move language support to Computer Doctor pane.
     * Add Eclipse owner correction in Computer Doctor pane.
+    * Fix bug: MPlayer-vod cannot be installed
 
 2010-05-29 MA Yue <velly.empire@gmail.com>
 
